fixed spacing issue with other projects section with css padding

--- a/code/style.css
+++ b/code/style.css
@@ -234,6 +234,7 @@
 .other-projects {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 100%;
     margin: 20px 0 20px 0;
@@ -251,7 +252,8 @@
 }
 
 .other-projects-container {
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
 }
 
@@ -261,10 +263,15 @@
     margin-top: 15px;
 }
 
+.other-projecs-text {
+    padding: 0 10px 0 10px;
+}
+
 .other-projects-card h3 {
     font-size: 17px;
     color: #00539CFF;
     padding-bottom: 10px;
 }
+
 
 
